[tool.poetry]
name = "neptune"
version = "0.1.0"
description = ""
authors = ["Yurzs <me@yurzs.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
pylint = "^3.1.0"


[tool.poetry.group.def.dependencies]
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
